--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+libkrunfw (4.5.1-1asahi8.24.10) oracular; urgency=medium
+
+  * Change library directory from /usr/lib64 to /usr/lib
+  * Build for oracular
+
+ -- Andreas Schröder <andreas@kernelpanik.net>  Tue, 3 Dec 2024 06:13:00 +0100
+
+libkrunfw (4.5.1-1asahi6.24.04) noble; urgency=medium
+
+  * Change library directory from /usr/lib64 to /usr/lib
+
+ -- Andreas Schröder <andreas@kernelpanik.net>  Sun, 1 Dec 2024 21:55:00 +0100
+
 libkrunfw (4.5.1-1asahi5.24.04) noble; urgency=medium
 
   * Build for noble
