dfsg: repack sources to avoid curl at build time
Running curl to fetch additional source tarballs is not compatible
with our build process.

- Add script to prefetch kernel sources and pack them in a tarball
- document the process in d/README.Debian-sources
- add a +ds suffix to signal a modified tarball.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libkrunfw (4.5.1-1asahi8.24.10) oracular; urgency=medium
+libkrunfw (4.5.1+ds.1-1asahi8.24.10) oracular; urgency=medium
 
   * Change library directory from /usr/lib64 to /usr/lib
   * Build for oracular
